# FastAPI_learning

./: .gitignore
fastApiSecond/: pyproject.toml
fastApiSecond/src/fastapisecond/: main.py
fastApiStart/: pyproject.toml
fastApiStart/src/fastapistart/: main.py
fastApiThird/: alembic.ini  pyproject.toml
fastApiThird/alembic/: env.py
fastApiThird/alembic/versions/: c4c1e2c74546_create_phone_number_for_user_column.py
fastApiThird/src/fastapithird/: database.py  main.py  models.py
fastApiThird/src/fastapithird/routers/: admin.py  auth.py  todos.py  user.py
fastApiThird/src/fastapithird/static/js/: base.js  bootstrap.js  bootstrap.js.map  jquery-slim.js  popper.js  popper.min.js.map
fastApiThird/src/fastapithird/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
fastApiThird/tests/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
